[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/MainTheme.tres" type="Theme" id=1]
[ext_resource path="res://src/scenes/CharacterDislocationPanel.gd" type="Script" id=2]
[ext_resource path="res://assets/images/gui/inventory/item_frame.png" type="Texture" id=3]
[ext_resource path="res://assets/images/gui/inventory/item_frame_chose.png" type="Texture" id=4]
[ext_resource path="res://assets/images/gui/universal/button.png" type="Texture" id=5]
[ext_resource path="res://assets/images/gui/universal/buttonpress.png" type="Texture" id=6]


[node name="CharacterDislocationPanel" type="Panel"]
margin_left = 140.639
margin_top = 201.312
margin_right = 1758.64
margin_bottom = 839.312
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 110.0
margin_top = 113.0
margin_right = 416.0
margin_bottom = 540.0
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 303.0
rect_min_size = Vector2( 303, 0 )

[node name="Button" type="TextureButton" parent="ScrollContainer/VBoxContainer"]
visible = false
margin_right = 303.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
toggle_mode = true
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Button"]
margin_left = 10.0
margin_top = 8.0
margin_right = 253.0
margin_bottom = 37.0
text = "Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="obed" type="Label" parent="ScrollContainer/VBoxContainer/Button"]
margin_left = 251.0
margin_top = 9.0
margin_right = 296.0
margin_bottom = 33.0
text = "15"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DestinationContainer" type="ScrollContainer" parent="."]
margin_left = 490.0
margin_top = 113.0
margin_right = 796.0
margin_bottom = 540.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="DestinationContainer"]
margin_right = 303.0
rect_min_size = Vector2( 303, 0 )

[node name="Button" type="TextureButton" parent="DestinationContainer/VBoxContainer"]
visible = false
margin_right = 303.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
toggle_mode = true
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
expand = true

[node name="Label" type="Label" parent="DestinationContainer/VBoxContainer/Button"]
margin_left = 10.0
margin_top = 7.97656
margin_right = 290.0
margin_bottom = 36.9766
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Name"
align = 1

[node name="HomeButton" type="OptionButton" parent="."]
margin_left = 129.742
margin_top = 55.0
margin_right = 393.742
margin_bottom = 95.0

[node name="DestinationButton" type="OptionButton" parent="."]
margin_left = 512.742
margin_top = 55.0
margin_right = 776.742
margin_bottom = 95.0

[node name="DescriptText" type="RichTextLabel" parent="."]
margin_left = 837.0
margin_top = 66.0
margin_right = 1136.0
margin_bottom = 538.0
bbcode_enabled = true
bbcode_text = "Text"
text = "Text"

[node name="TravelConfirmButton" type="Button" parent="."]
margin_left = 518.0
margin_top = 550.0
margin_right = 766.0
margin_bottom = 602.0
text = "Confirm"

[node name="TravelersContainer" type="ScrollContainer" parent="."]
margin_left = 1232.0
margin_top = 80.0
margin_right = 1547.0
margin_bottom = 589.0
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="TravelersContainer"]
margin_right = 315.0
size_flags_horizontal = 3
custom_constants/separation = 33

[node name="Button" type="Button" parent="TravelersContainer/VBoxContainer"]
visible = false
margin_right = 315.0
margin_bottom = 38.2509

[node name="Progress" type="ProgressBar" parent="TravelersContainer/VBoxContainer/Button"]
margin_left = 7.60327
margin_top = 42.0
margin_right = 307.603
margin_bottom = 68.0
value = 50.0
percent_visible = false

[node name="Label" type="Label" parent="TravelersContainer/VBoxContainer/Button/Progress"]
margin_right = 301.0
margin_bottom = 24.0
text = "5 hours"
align = 1

[node name="Label" type="Label" parent="."]
margin_left = 1336.7
margin_top = 40.7499
margin_right = 1433.7
margin_bottom = 64.7499
text = "On Road"

[node name="VSeparator" type="VSeparator" parent="."]
margin_left = 1146.0
margin_top = 5.0
margin_right = 1185.0
margin_bottom = 634.0

[node name="Label2" type="Label" parent="."]
margin_left = 134.0
margin_top = 22.0
margin_right = 383.0
margin_bottom = 46.0
text = "LABELDISLOCATION"
align = 1
clip_text = true

[node name="Label3" type="Label" parent="."]
margin_left = 530.0
margin_top = 22.0
margin_right = 768.0
margin_bottom = 46.0
text = "LABELDESTINATION"
align = 1
clip_text = true
